--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ install:
 script:
     - >
         ./misc/dockrun ${DOCKER_IMAGE}
-        /bin/sh -e -c "cd /fs123 && . ./misc/prereqs.${DOCKER_IMAGE} && make -j4 check && make -j4 core123-check && make install"
+        /bin/sh -e -c "cd /fs123 && . ./misc/prereqs.${DOCKER_IMAGE} && mkdir build && cd build && make -f ../GNUmakefile -j4 check && make -f ../GNUmakefile -j4 core123-check && make -f ../GNUmakefile install"
 
 # There must be a better way ...
 after_failure:
