Ignore files called fs123p7, but not the top-level directory
Change-Id: I5b175e9d60834f4bd7f0c00f70ef6b3b09ba352c

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@ ut_*
 *.d
 testconfigparser
 ex1server
+# files called fs123p7
 fs123p7
+# But not the top-level directory called fs123p7
+!/fs123p7
 libfs123.a
 obj/
 obj-*/
