Major change - protocol 7.3 and new server API
This patch is the net result of several feature-branches
meged into the in-house DESRES version.

The 7.3 protocol removes http headers and reformats
the http message body as a list of key-value pairs.

Directory "offsets" are communicated as strings rather
than numbers, with corresponding changes to the fs123server
API.

New utilities and bug-fixes in core123.

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,12 +42,12 @@ script:
 
 # There must be a better way ...
 after_failure:
-    - cat s/fs123.diag
-    - cat s/errorlog.1 s/errorlog
-    - cat s/exportd.*
-    - cat c/fs123.diag
-    - cat c/fs123.err
-    - cat c/fs123.exstatus
+    - cat build/s/fs123.diag
+    - cat build/s/errorlog.1 s/errorlog
+    - cat build/s/exportd.*
+    - cat build/c/fs123.diag
+    - cat build/c/fs123.err
+    - cat build/c/fs123.exstatus
 
 before_deploy:
     - >
