--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 version: ~> 1.0
 language: shell
 os: linux
-dist: xenial
+dist: focal
 
 services:
     - docker
@@ -14,14 +14,16 @@ env:
     jobs:
         # alpine 3.12 (or later) is built static, while 3.11 is dynamic
         - DOCKER_IMAGE=alpine:3.11
-        - DOCKER_IMAGE=alpine:3.12
+        - DOCKER_IMAGE=alpine:3.14
         - DOCKER_IMAGE=centos:7
-        - DOCKER_IMAGE=fedora:32
+        - DOCKER_IMAGE=rockylinux/rockylinux:8
+        - DOCKER_IMAGE=fedora:34
         - DOCKER_IMAGE=ubuntu:focal
         - DOCKER_IMAGE=ubuntu:bionic
         - DOCKER_IMAGE=ubuntu:xenial
         - DOCKER_IMAGE=debian:stretch
         - DOCKER_IMAGE=debian:buster
+        - DOCKER_IMAGE=debian:bullseye
 
 # add fuse to the build host VM
 # https://github.com/travis-ci/travis-ci/issues/1100
@@ -51,7 +53,7 @@ after_failure:
 
 before_deploy:
     - >
-        [[ $DOCKER_IMAGE = "alpine:3.12" ]] &&
+        [[ $DOCKER_IMAGE = "alpine:3.14" ]] &&
         ./misc/dockrun ${DOCKER_IMAGE} /fs123/misc/packaging/build-static
 
 deploy:
@@ -64,7 +66,7 @@ deploy:
     cleanup: false
     on:
         tags: true
-        condition: $DOCKER_IMAGE = "alpine:3.12"
+        condition: $DOCKER_IMAGE = "alpine:3.14"
     edge: true
 
 
