Don't use elastic_threadpool for now (#45)
* Don't use elastic_threadpool for now

There is another rare, only-at-shutdown, race condition, which
should be fixed in due course.  But until then:

Don't use elastic_threadpool in the fs123p7::tp_handler
Don't build ut_elastic_threadpool with the other core123 unit_tests
Don't allow #include "core123/elastic_threadpool.hpp" without
   a #define USE_BUGGY_ELASTIC_THREADPOOL

--- a/core123/GNUmakefile
+++ b/core123/GNUmakefile
@@ -124,6 +124,11 @@ unit_tests:=\
 # In a few cases (e.g., clang8 with libstdc++), a test won't compile
 # for reasons that appear to be compiler/library bugs and not our
 # code.  The caller can set DO_NOT_TEST to avoid errors.
+
+# The elastic_threadpool unit test intermittently detects a genuine
+# bug in elastic_threadpool.  Until it's fixed, exclude
+# elastic_threadpool from unit_tests.
+DO_NOT_TEST+=ut_elastic_threadpool
 ifdef DO_NOT_TEST
 $(warning Remove tests matching '$(DO_NOT_TEST)' from unit_tests:)
 $(warning $(filter $(DO_NOT_TEST),$(unit_tests)))
@@ -133,11 +138,12 @@ endif
 shunit_tests:=ut_configparser
 
 unit_tests.out:=$(addsuffix .out, $(unit_tests) $(shunit_tests))
-# the unit tests typically run for only a few seconds.  Run them
-# under 'timeout' so if they hang, we get a positive confirmation
-# that something is wrong.  2 minutes should be *plenty* of time.
+# the unit tests typically run for only a few seconds.  Run them under
+# 'timeout' so if they hang, we get a positive confirmation that
+# something is wrong and a core dump.  2 minutes should be *plenty* of
+# time.
 ut_%.out : ut_%
-	timeout 2m ./$< > $@.tmp && mv $@.tmp $@
+	timeout -s ABRT 2m ./$< > $@.tmp && mv $@.tmp $@
 
 ut_diagtime_flood.out: ut_diagtime_flood
 	DIAG_OPTS=flood ./$< > $@.tmp && mv $@.tmp $@
