--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,8 @@ ut_*
 *.d
 testconfigparser
 ex1server
-# files called fs123p7
 fs123p7
-# But not the top-level directory called fs123p7
-!/fs123p7
+testserver
 libfs123.a
 obj/
 obj-*/
